complete swap module
