# x/swap/types/params.go
@@ -11,13 +11,17 @@ const (
 	DefaultDenom = "upaxi"
 )
 
-var KeyParams = []byte("swap_params")
+var (
+	PoolPrefix     = []byte{0x01} // Pools
+	PositionPrefix = []byte{0x02} // Provider Positions
+	KeyParams      = []byte("swap_params")
+)
 
 // Params defines spam protection parameters for the Paxi blockchain.
 type Params struct {
-	CodeID        uint64 `json:"code_id" yaml:"code_id"`
-	SwapFeeBPS    uint64 `json:"swap_fee_bps" yaml:"swap_fee_bps"`
-	MinLidquidity uint64 `json:"min_liquidity" yaml:"min_liquidity"`
+	CodeID       uint64 `json:"code_id" yaml:"code_id"`
+	SwapFeeBPS   uint64 `json:"swap_fee_bps" yaml:"swap_fee_bps"`
+	MinLiquidity uint64 `json:"min_liquidity" yaml:"min_liquidity"`
 }
 
 type GenesisState struct {
@@ -36,9 +40,9 @@ func (gs GenesisState) Validate() error {
 
 func DefaultParams() Params {
 	return Params{
-		CodeID:        1,         // Default code ID for prc-20 contracts
-		SwapFeeBPS:    40,        // 0.4%
-		MinLidquidity: 1_000_000, // 1 Paxi
+		CodeID:       1,         // Default code ID for prc-20 contracts
+		SwapFeeBPS:   4,         // 0.4% note: 1000 BPS = 100%
+		MinLiquidity: 1_000_000, // 1 Paxi
 	}
 }
 
@@ -49,7 +53,7 @@ func (p Params) Validate() error {
 	if p.CodeID == 0 {
 		return fmt.Errorf("code ID must be greater than 0")
 	}
-	if p.MinLidquidity <= 0 {
+	if p.MinLiquidity <= 0 {
 		return fmt.Errorf("min liquidity must be greater than 0")
 	}
 	return nil
